# uem-reader-rs

./: Cargo.toml  README.md
src/: card.rs  commands.rs  commands_reader.rs  errors.rs  helpers.rs  lib.rs  main.rs  main_list.rs  main_working.rs  reader.rs  reader_rs.rs  reader_usb.rs
src/commands/: cards.rs  reader.rs
src/commands/cards/: mifare.rs
src/commands/cards/mifare/: classic.rs
src/reader/: com.rs  usb.rs
