[package]
name = "uem-reader"
version = "0.2.0"
edition = "2021"
authors = ["Yury Laykov"]
description = "Library for MicroEM RFID readers"
readme = "README.md"
homepage = "https://microem.ru/catalog/vstraivaemye_i_gotovye_ustroystva/rfid_schityvateli/"
repository = "https://github.com/LumaRay/uem-reader-rs"
license = "MIT OR Apache-2.0"
keywords = ["rfid", "nfc", "mifare", "iso-14443", "iso-15693"]
categories = ["hardware-support", "embedded", "accessibility", "api-bindings"]

[features]
default = ["std"]
std = []

[dependencies]
rusb = "0.9"
usb-ids = "1.2022"
enum-iterator = "1.2.0"
thiserror = "1.0"
rand = "0.8.5"